--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qwanza",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,19 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
-    "ethers": "^5.6.8",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
     "vite": "^2.9.9"
   }
 }
